[package]
name = "decentnet_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.56"
serde_bytes = "0.11.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.31"
rmp-serde = "1.1.0"
base64 = "0.13.0"

[features]
default = ["interface", "builders"]
full = ["builders", "templates", "interface"]

interface = ["templates"]
builders = ["templates"]
templates = []