[package]
name = "decentnet_protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rmp-serde = "1.1"
base64 = "0.21"
koibumi-base32 = {version= "0.0.2", optional = true}
tor-stream = {git = "https://github.com/decentnetwork/tor-stream.git", optional = true}
tokio = { version = "1.0", default-features = false, features = ["net"] }

[features]
default = ["interface", "builders"]
full = ["builders", "templates", "interface", "tor"]

interface = ["templates"]
builders = ["templates"]
templates = []

tor = ["tor-stream", "koibumi-base32"]
i2p = []
